--- a/src/scss/pages/_cart.scss
+++ b/src/scss/pages/_cart.scss
@@ -5,11 +5,25 @@
   flex-direction: column;
   height: 100%;
   overflow: hidden;
-  height: calc(100vh - $header_height - 244px);
-
+  // height: calc(100vh - $header_height - 244px);
+  section:not(.empty) {
+    // width: 50%;
+  }
   section.orders {
     // height: calc(100vh - 244px);
-    overflow: scroll;
+    overflow: auto;
+    @media (min-width: $md_breakpoint) {
+      height: 100%;
+      width: 50%;
+      .tile {
+        justify-content: center;
+        .description {
+          width: 25vw;
+          max-width: 400px;
+        }
+      }
+    }
+
     .single_order {
       border-radius: 4px;
       background: rgba(172, 115, 73, 0.23);
@@ -26,21 +40,28 @@
         justify-content: space-between;
 
         .image {
+          // max-width: 45vw;
+          // width: 100%;
+          flex: 1 1 30%;
+          text-align: center;
           picture {
             margin: 0 auto;
           }
         }
         .description {
-          // flex: 1 1 50%;
+          flex: 1 1 70%;
           display: flex;
           flex-direction: row;
           flex-wrap: wrap;
           justify-content: space-between;
           align-items: center;
+          // max-width: 55vw;
+          // width: 100%;
+
           .title {
             flex-basis: 100%;
             color: #000;
-            font-size: 20px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 400;
             line-height: 150%; /* 30px */
@@ -52,7 +73,7 @@
             .price {
               color: #000;
 
-              font-size: 20px;
+              font-size: 18px;
               font-style: normal;
               font-weight: 400;
               line-height: 150%; /* 30px */
@@ -71,9 +92,9 @@
           background-color: $cta_color;
           color: $header_color;
           border-radius: 0;
+          width: 30px;
+        
           &[type='button'] {
-            // max-width: 30px;
-            width: 100%;
             &:first-child {
               border-radius: 4px 0 0 4px;
             }
@@ -82,10 +103,11 @@
             }
           }
           &[type='number'] {
-            // background-color: #fff;
-            // max-width: 30px;
-            width: 100%;
             text-align: center;
+            &:disabled {
+              background-color: $cta_color;
+              color: $header_color;
+            }
           }
         }
       }
