--- a/src/scss/pages/_welcome.scss
+++ b/src/scss/pages/_welcome.scss
@@ -1,30 +1,23 @@
 @use '../partials/variables' as v;
 
-// .cls_content.welcome {
-//     padding-bottom: v.vw(375, calc(667 - 90));
-//         @media (min-width: v.$lg_breakpoint) {
-//             padding-bottom: v.vw(1280, 581);
-//         }
 .welcome {
   height: calc(100vh - #{v.$header_height});
   .wrapper {
-    // padding-top: v.$header_height;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-  .logo {
-    max-width: 175px;
+    svg {
+      height: 40vh;
+    }
   }
   .clickToStart {
-    color: #000;
+    color: v.$text_color;
     text-align: center;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 50px; /* 250% */
   }
 }
 // }
