--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -1,6 +1,8 @@
 @use '../partials/variables' as v;
 
-html,
+html{
+  background-color: v.$header_color;
+}
 #app,
 body {
   margin: 0;
@@ -9,29 +11,31 @@ body {
   background-color: v.$bg_color;
   font-family: 'mainFont';
   font-size: v.$font-size;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+body::-webkit-scrollbar{
+  display: none;
 }
 body * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  // height: 100%
 }
 main {
-  height: calc(100vh - (v.$header_height * 2));
-  // height: 100%;
-  // display: flex;
-  // flex-direction: column;
+  min-height: calc(100vh - (v.$header_height + v.$footer_height));
 }
 
 section {
-  padding: 20px 20px 70px 20px;
+  padding: 15px 15px 70px 15px;
 }
 
 .product_page .action {
   display: none;
 }
 section.empty {
-  height: calc(100vh - (52px * 2));
+  height: calc(100vh - (v.$header_height + v.$footer_height));
+  width: auto;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -46,7 +50,7 @@ section.empty {
   border-radius: 4px;
   border: none;
   border-bottom: 1px solid #000;
-  padding: 5px 20px;
+  padding: 5px 25px;
   font-size: 16px;
 }
 
@@ -69,17 +73,5 @@ span,
 div {
   font-family: 'mainFont';
   font-weight: normal;
+  color: v.$text_color;
 }
-// .cls_content {
-//   position: relative;
-//   object-fit: cover;
-// }
-// .cls_content > .cls_box {
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   width: 100%;
-//   height: 100%;
-// }
