--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -1,6 +1,7 @@
-@use '../partials/variables' as v;
+@use "../partials/variables" as v;
+@import "../partials/variables";
 
-html{
+html {
   background-color: v.$header_color;
 }
 #app,
@@ -9,12 +10,15 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: v.$bg_color;
-  font-family: 'body_font';
+  font-family: "text", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
   font-size: v.$font-size;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   display: none;
 }
 body * {
@@ -24,10 +28,13 @@ body * {
 }
 main {
   min-height: calc(100vh - (v.$header_height + v.$footer_height));
+  @media(min-width: $md_breakpoint){
+    min-height: calc(100vh - (v.$header_height));
+  }
 }
 
 section {
-  padding: 15px 15px 70px 15px;
+  padding: 20px 28px;
 }
 
 .product_page .action {
@@ -49,9 +56,13 @@ section.empty {
   background-color: transparent;
   border-radius: 4px;
   border: none;
-  border-bottom: 1px solid #000;
-  padding: 5px 25px;
-  font-size: 16px;
+  border-bottom: 1px solid v.$text_color;
+  padding: 10px 20px;
+  font-size: 14px;
+  max-height: 30px;
+  height: 100%;
+  line-height: 14px;
+  font-family: 'text', sans-serif;
 }
 
 a {
@@ -68,15 +79,13 @@ a {
 p,
 span,
 div {
-  font-family: 'body_font';
+  font-family: "text", sans-serif;
   font-weight: normal;
   color: v.$text_color;
 }
 
-h1,
-h2,
-h3 {
-  font-family: 'header';
+h1 {
+  font-family: "header";
   font-weight: normal;
   color: v.$text_color;
 }
