--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,21 +1,22 @@
-@use "sass:math";
+// @use "sass:math";
 @function vw($w, $h) {
-  $vw: math.div($h, math.div($w, 100vw));
+  $vw: calc($h / ($w / 100vw));
   @return $vw;
 }
 
+$xl_breakpoint: 1200px;
 $lg_breakpoint: 800px;
 $md_breakpoint: 600px;
 $xs_breakpoint: 350px;
 
-$bg_color: #f0c9ba8c;
+$bg_color: #e3d3c4;
 $header_color: #ffff;
-$details_color: #ca8f7ac9;
-$promo_color: #333333;
-$cta_color: #965858;
-$text_color: #333333;
+$details_color: #ccbcac;
+$promo_color: #f7505a;
+$cta_color: #4f483e;
+$text_color: #262626;
 
-$font_size: clamp(14px, 18px, 20px);
+$font_size: clamp(14px, 16px, 18px);
 
 $header_height: 42px;
 $footer_height: 40px;
@@ -28,35 +29,55 @@ $header_padding: 28px;
   align-items: center;
 }
 @mixin shadow {
-  -webkit-box-shadow: 0px 4px 35px -8px #964b00;
-  -moz-box-shadow: 0px 4px 35px -8px #964b00;
-  box-shadow: 0px 4px 35px -8px #964b00;
+  background: #FFF;
+  box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
 }
 
 @mixin btn {
   appearance: none;
   border: none;
   background-color: $cta_color;
-  padding: 5px vw(408, 50);
+  padding: 10px vw(408, 50);
   border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
   color: #fff;
-  font-size: 16px;
-  height: 34px;
+  font-size: 14px;
+  max-height: 30px;
+  height: 100%;
+  @media (min-width: $md_breakpoint){
+    font-size: 20px;
+    max-height: none;
+    width: 40%;
+
+  }
 }
 
 @font-face {
   font-family: "header";
-  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/Montserrat/static/Montserrat-Medium.ttf")
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/raleway/Raleway-Regular.ttf")
     format("TrueType");
   font-display: swap;
 }
 @font-face {
-  font-family: "body_font";
-  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/Open_Sans/static/OpenSans-Regular.ttf")
+  font-family: "text";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Regular.ttf")
+    format("TrueType");
+  font-display: swap;
+}
+@font-face {
+  font-family: "text--light";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Light.ttf")
+    format("TrueType");
+  font-display: swap;
+}
+@font-face {
+  font-family: "text--bold";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Bold.ttf")
     format("TrueType");
   font-display: swap;
 }
