--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,11 +1,41 @@
 @font-face {
   font-family: "header";
-  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/Montserrat/static/Montserrat-Medium.ttf") format("TrueType");
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/raleway/Raleway-Regular.ttf") format("TrueType");
   font-display: swap;
 }
 @font-face {
-  font-family: "body_font";
-  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/Open_Sans/static/OpenSans-Regular.ttf") format("TrueType");
+  font-family: "text";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Regular.ttf") format("TrueType");
+  font-display: swap;
+}
+@font-face {
+  font-family: "text--light";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Light.ttf") format("TrueType");
+  font-display: swap;
+}
+@font-face {
+  font-family: "text--bold";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Bold.ttf") format("TrueType");
+  font-display: swap;
+}
+@font-face {
+  font-family: "header";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/raleway/Raleway-Regular.ttf") format("TrueType");
+  font-display: swap;
+}
+@font-face {
+  font-family: "text";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Regular.ttf") format("TrueType");
+  font-display: swap;
+}
+@font-face {
+  font-family: "text--light";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Light.ttf") format("TrueType");
+  font-display: swap;
+}
+@font-face {
+  font-family: "text--bold";
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/roboto/Roboto-Bold.ttf") format("TrueType");
   font-display: swap;
 }
 html {
@@ -17,9 +47,12 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgba(240, 201, 186, 0.5490196078);
-  font-family: "body_font";
-  font-size: 18px;
+  background-color: #e3d3c4;
+  font-family: "text", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  font-size: 16px;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
@@ -37,9 +70,14 @@ body * {
 main {
   min-height: calc(100vh - 82px);
 }
+@media (min-width: 600px) {
+  main {
+    min-height: calc(100vh - 42px);
+  }
+}
 
 section {
-  padding: 15px 15px 70px 15px;
+  padding: 20px 28px;
 }
 
 .product_page .action {
@@ -62,14 +100,18 @@ section.empty {
   background-color: transparent;
   border-radius: 4px;
   border: none;
-  border-bottom: 1px solid #000;
-  padding: 5px 25px;
-  font-size: 16px;
+  border-bottom: 1px solid #262626;
+  padding: 10px 20px;
+  font-size: 14px;
+  max-height: 30px;
+  height: 100%;
+  line-height: 14px;
+  font-family: "text", sans-serif;
 }
 
 a {
   text-decoration: none;
-  color: #333333;
+  color: #262626;
 }
 
 .single_order .details {
@@ -79,17 +121,15 @@ a {
 p,
 span,
 div {
-  font-family: "body_font";
+  font-family: "text", sans-serif;
   font-weight: normal;
-  color: #333333;
+  color: #262626;
 }
 
-h1,
-h2,
-h3 {
+h1 {
   font-family: "header";
   font-weight: normal;
-  color: #333333;
+  color: #262626;
 }
 
 .header {
@@ -109,6 +149,9 @@ h3 {
   font-size: 20px;
   font-weight: 800;
 }
+.header h1:hover {
+  cursor: pointer;
+}
 
 footer {
   position: fixed;
@@ -116,9 +159,10 @@ footer {
   bottom: 0;
   right: 0;
   background-color: white;
-  -webkit-box-shadow: 0px 4px 35px -8px #964b00;
-  -moz-box-shadow: 0px 4px 35px -8px #964b00;
-  box-shadow: 0px 4px 35px -8px #964b00;
+  background: #FFF;
+  box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
 }
 footer nav {
   height: 100%;
@@ -157,11 +201,54 @@ footer nav ul a.router-link-active {
   border-top: 2px solid #965858;
 }
 
+@media (min-width: 1200px) {
+  footer {
+    bottom: auto;
+    height: 42px;
+    top: 0;
+    box-shadow: none;
+    width: 600px;
+    left: unset;
+    transition: width 0.1s ease-in-out;
+  }
+  footer.scroll {
+    width: 100%;
+  }
+  footer.scroll nav {
+    max-width: 600px;
+  }
+  footer nav {
+    margin: auto;
+  }
+  footer nav ul li .fa-lg {
+    display: none;
+  }
+  footer nav ul li label {
+    font-size: 16px;
+  }
+  footer nav ul li label:hover {
+    cursor: pointer;
+  }
+  footer nav ul a.router-link-active {
+    border-bottom: 2px solid #965858;
+    border-top: 0;
+  }
+}
+.tile_wrapper {
+  max-width: 39.8533007335vw;
+}
+@media (max-width: 350px) {
+  .tile_wrapper {
+    max-width: none;
+  }
+}
+
 .product_tile {
   background-color: white;
   height: 100%;
   min-height: 220px;
   border-radius: 4px;
+  width: 100%;
 }
 .product_tile .tile {
   height: 100%;
@@ -172,7 +259,7 @@ footer nav ul a.router-link-active {
 .product_tile .tile .action {
   display: flex;
   justify-content: space-between;
-  padding: 10px 7px 0 10px;
+  padding: 10px 5px 0 10px;
 }
 .product_tile .tile .image {
   flex: 1 1 50%;
@@ -182,9 +269,9 @@ footer nav ul a.router-link-active {
   width: 100%;
 }
 .product_tile .tile .description {
-  padding: 19px 5px;
+  padding: 19px 10px 15px;
   flex: 1 1 50%;
-  background-color: rgba(202, 143, 122, 0.7882352941);
+  background-color: #ccbcac;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
@@ -192,45 +279,50 @@ footer nav ul a.router-link-active {
   gap: 10px;
 }
 .product_tile .tile .description .title {
+  font-family: "text--light", sans-serif;
   text-align: center;
-  font-weight: 800;
-  text-align: center;
-  font-size: 16px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 19px;
+}
+@media (min-width: 1200px) {
+  .product_tile .tile .description .title {
+    font-size: 16px;
+  }
 }
 .product_tile .tile .description .price_container {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-.product_tile .tile .description .price_container .new_price {
-  color: #333333;
-  text-align: center;
-  font-size: 16px;
+.product_tile .tile .description .price_container h4.new_price, .product_tile .tile .description .price_container h5.old_price {
+  font-size: 20px;
   font-style: normal;
-  font-weight: 400;
+}
+.product_tile .tile .description .price_container .new_price {
+  color: #f7505a;
+  text-align: center;
+  font-family: "text--bold", sans-serif;
 }
 .product_tile .tile .description .price_container .new_price ~ .old_price {
   text-decoration: line-through;
-  font-size: 14px;
-  align-self: center;
+  font-family: "text--light", sans-serif;
 }
 .product_tile .tile .description .price_container .old_price {
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
   font-style: normal;
-  font-weight: 400;
 }
 .product_tile:hover {
-  -webkit-box-shadow: 0px 4px 35px -8px #964b00;
-  -moz-box-shadow: 0px 4px 35px -8px #964b00;
-  box-shadow: 0px 4px 35px -8px #964b00;
+  background: #FFF;
+  box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
 
 .single_transaction {
-  background: rgba(172, 115, 73, 0.23);
+  width: 356px;
+  background: #ccbcac;
   margin: 10px 0;
   padding: 9px 12px;
   border-radius: 4px;
@@ -286,7 +378,7 @@ footer nav ul a.router-link-active {
   height: 40vh;
 }
 .welcome .clickToStart {
-  color: #333333;
+  color: #262626;
   text-align: center;
   font-size: 20px;
   font-style: normal;
@@ -591,24 +683,19 @@ footer nav ul a.router-link-active {
 }
 
 .product_page {
-  height: calc(100vh - 92px);
-  padding: 0;
-}
-.product_page .product_tile {
   height: 100%;
+  padding: 0;
 }
 .product_page .product_tile:hover {
   box-shadow: none;
 }
 .product_page .tile {
-  height: 100%;
-  background-color: rgba(240, 201, 186, 0.5490196078);
+  background-color: #e3d3c4;
 }
 .product_page .tile .action {
   display: none;
 }
 .product_page .tile .image {
-  margin: 0 auto;
   flex: 1 1 40%;
   min-height: 100px;
   min-width: 200px;
@@ -621,28 +708,20 @@ footer nav ul a.router-link-active {
   flex: 1 1 60%;
   background-color: white;
   height: 100%;
-  padding: 0 15px 34vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #000;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
+  padding: 20px 28px 70px;
+  align-items: flex-start;
+  letter-spacing: 0.08px;
 }
 .product_page .tile .description .title {
-  margin: 15px 0 0 0;
-  font-size: 24px;
+  font-size: 34px;
+  font-weight: 600;
 }
 .product_page .tile .description .details {
   text-align: justify;
   order: 1;
-  color: #000;
-  font-size: 14px;
-  font-style: normal;
-  line-height: 18px;
-  max-height: 85px;
+  font-size: 16px;
   overflow-y: scroll;
+  font-family: "text--light", sans-serif;
 }
 .product_page .tile .description .price_container {
   order: 2;
@@ -652,10 +731,7 @@ footer nav ul a.router-link-active {
   gap: 20px;
 }
 .product_page .tile .description .price_container .new_price {
-  color: #db1313;
   font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
 }
 .product_page .tile .description .price_container .new_price ~ .old_price {
   text-decoration: line-through;
@@ -664,7 +740,6 @@ footer nav ul a.router-link-active {
 .product_page .tile .description .price_container .old_price {
   font-size: 25px;
   font-style: normal;
-  font-weight: 400;
 }
 @media (min-width: 800px) {
   .product_page .tile {
@@ -683,7 +758,8 @@ footer nav ul a.router-link-active {
   .product_page .tile .description {
     flex: 1 1 50%;
     justify-content: space-evenly;
-    padding-bottom: 42px;
+    padding-bottom: 50px;
+    height: calc(100vh - 42px);
   }
   .product_page .tile .description .price_container {
     justify-content: space-between;
@@ -697,40 +773,51 @@ footer nav ul a.router-link-active {
   bottom: 40px;
   display: flex;
   justify-content: space-between;
-  padding: 0 15px;
+  padding: 0 28px 20px;
   align-items: center;
   background-color: white;
-  min-height: 65px;
 }
 .add_to_cart .buy {
+  text-transform: uppercase;
   appearance: none;
   border: none;
-  background-color: #965858;
-  padding: 5px 12.2549019608vw;
+  background-color: #4f483e;
+  padding: 10px 12.2549019608vw;
   border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
   color: #fff;
-  font-size: 16px;
-  height: 34px;
+  font-size: 14px;
+  max-height: 30px;
+  height: 100%;
+}
+@media (min-width: 600px) {
+  .add_to_cart .buy {
+    font-size: 20px;
+    max-height: none;
+    width: 40%;
+  }
 }
 @media (min-width: 800px) {
   .add_to_cart {
     left: 50%;
-    min-height: 100px;
+    bottom: 0;
   }
 }
 
 .listing {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 15px;
+  justify-content: space-between;
+  gap: 28px;
+  justify-items: stretch;
+  align-content: space-around;
+  align-items: stretch;
 }
 .listing > h1 {
   grid-column: span 2;
-  margin-bottom: 20px;
   font-weight: 600;
 }
 @media (max-width: 350px) {
@@ -771,47 +858,48 @@ footer nav ul a.router-link-active {
   flex-direction: column;
   height: 100%;
   overflow: hidden;
+  padding: 20px 0;
 }
-.cart_page section.orders {
+.cart_page .orders {
   overflow: auto;
 }
 @media (min-width: 600px) {
-  .cart_page section.orders {
+  .cart_page .orders {
     height: 100%;
     width: 50%;
   }
-  .cart_page section.orders .tile {
+  .cart_page .orders .tile {
     justify-content: center;
   }
-  .cart_page section.orders .tile .description {
+  .cart_page .orders .tile .description {
     width: 25vw;
     max-width: 400px;
   }
 }
-.cart_page section.orders .single_order {
+.cart_page .orders .single_order {
   border-radius: 4px;
-  background: rgba(172, 115, 73, 0.23);
+  background: #ccbcac;
   margin: 10px 0;
   padding: 9px 12px;
   max-height: 115px;
 }
-.cart_page section.orders .single_order:first-of-type {
+.cart_page .orders .single_order:first-of-type {
   margin-top: 12px;
 }
-.cart_page section.orders .single_order .tile {
+.cart_page .orders .single_order .tile {
   display: flex;
   height: 97px;
-  gap: 32px;
+  gap: 7.8239608802vw;
   justify-content: space-between;
 }
-.cart_page section.orders .single_order .tile .image {
+.cart_page .orders .single_order .tile .image {
   flex: 1 1 30%;
   text-align: center;
 }
-.cart_page section.orders .single_order .tile .image picture {
+.cart_page .orders .single_order .tile .image picture {
   margin: 0 auto;
 }
-.cart_page section.orders .single_order .tile .description {
+.cart_page .orders .single_order .tile .description {
   flex: 1 1 70%;
   display: flex;
   flex-direction: row;
@@ -819,50 +907,61 @@ footer nav ul a.router-link-active {
   justify-content: space-between;
   align-items: center;
 }
-.cart_page section.orders .single_order .tile .description .title {
+.cart_page .orders .single_order .tile .description .title {
   flex-basis: 100%;
-  color: #000;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 30px */
+  color: #262626;
+  font-size: 20px;
+  font-family: "text", sans-serif;
 }
-.cart_page section.orders .single_order .tile .description .price_container {
+.cart_page .orders .single_order .tile .description .action_container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+@media (max-width: 350px) {
+  .cart_page .orders .single_order .tile .description .action_container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+.cart_page .orders .single_order .tile .description .action_container .price_container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-.cart_page section.orders .single_order .tile .description .price_container .price {
+.cart_page .orders .single_order .tile .description .action_container .price_container .price {
   color: #000;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 30px */
+  font-family: "text", sans-serif;
+  font-size: 20px;
 }
-.cart_page section.orders .single_order .counter {
+.cart_page .orders .single_order .tile .description .action_container .counter {
   display: flex;
-  max-width: 132px;
-  height: 30px;
+  justify-content: end;
 }
-.cart_page section.orders .single_order .counter input {
+.cart_page .orders .single_order .tile .description .action_container .counter input {
   appearance: none;
   border: none;
-  background-color: #965858;
+  background-color: #4f483e;
   color: white;
   border-radius: 0;
-  width: 30px;
+  height: 30px;
+  font-family: "text", sans-serif;
+  font-weight: 800;
+  font-size: 20px;
+  width: 40px;
 }
-.cart_page section.orders .single_order .counter input[type=button]:first-child {
+.cart_page .orders .single_order .tile .description .action_container .counter input[type=button]:first-child {
   border-radius: 4px 0 0 4px;
 }
-.cart_page section.orders .single_order .counter input[type=button]:last-child {
+.cart_page .orders .single_order .tile .description .action_container .counter input[type=button]:last-child {
   border-radius: 0 4px 4px 0;
 }
-.cart_page section.orders .single_order .counter input[type=number] {
+.cart_page .orders .single_order .tile .description .action_container .counter input[type=number] {
   text-align: center;
+  padding-left: 14px;
 }
-.cart_page section.orders .single_order .counter input[type=number]:disabled {
-  background-color: #965858;
+.cart_page .orders .single_order .tile .description .action_container .counter input[type=number]:disabled {
+  background-color: #4f483e;
   color: white;
 }
 .cart_page .summary {
@@ -872,7 +971,7 @@ footer nav ul a.router-link-active {
   right: 0;
   left: 0;
   background-color: white;
-  padding: 20px 10px 72px;
+  padding: 20px 10px 42px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -885,29 +984,19 @@ footer nav ul a.router-link-active {
   height: 24px;
 }
 .cart_page .summary h2 {
-  color: #000;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 30px */
+  font-size: 22px;
+  font-weight: 600;
   text-align: center;
 }
 .cart_page .summary .discount * {
-  color: #000;
   font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 18px */
+  font-family: "text", sans-serif;
 }
 .cart_page .summary .total * {
-  color: #000;
+  font-family: "text", sans-serif;
   font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 24px */
 }
 .cart_page .summary .sum {
-  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -918,18 +1007,27 @@ footer nav ul a.router-link-active {
 }
 .cart_page .summary .sum button.checkout {
   width: 100%;
+  font-family: "text", sans-serif;
   appearance: none;
   border: none;
-  background-color: #965858;
-  padding: 5px 12.2549019608vw;
+  background-color: #4f483e;
+  padding: 10px 12.2549019608vw;
   border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
   color: #fff;
-  font-size: 16px;
-  height: 34px;
+  font-size: 14px;
+  max-height: 30px;
+  height: 100%;
+}
+@media (min-width: 600px) {
+  .cart_page .summary .sum button.checkout {
+    font-size: 20px;
+    max-height: none;
+    width: 40%;
+  }
 }
 .cart_page .summary .sum .back {
   min-width: 100px;
@@ -941,25 +1039,28 @@ footer nav ul a.router-link-active {
     flex: 1 1 50%;
   }
   .cart_page .summary {
-    padding-top: 82px;
+    padding-top: 62px;
     left: 50%;
     top: 0;
     height: 100%;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    align-content: flex-end;
+    justify-content: flex-start;
     gap: 25px;
   }
   .cart_page .summary h2 {
     align-self: flex-start;
     margin: 0;
-    font-size: 38px;
+    font-size: 34px;
   }
   .cart_page .summary .discount * {
-    font-size: 26px;
+    font-size: 18px;
   }
   .cart_page .summary .total * {
-    font-size: 30px;
+    font-size: 20px;
+  }
+  .cart_page .summary .sum {
+    margin-top: auto;
+    margin-bottom: 0;
+    align-self: flex-end;
   }
 }
 
